fix table layout shift

--- a/src/client/components/table/table.css
+++ b/src/client/components/table/table.css
@@ -6,14 +6,16 @@
 
 .xe-table thead tr th {
     font-weight: bold;
-    padding-bottom: .5rem;
+    padding: .5rem;
     color: #afafaf;
     text-align: left;
+    white-space: nowrap;
 }
 
 .xe-table tbody tr td {
-    padding: .75rem 0;
+    padding: .75rem .5rem;
     vertical-align: middle;
+    white-space: nowrap;
 }
 
 .xe-table-clickable tbody tr:hover td {
@@ -24,10 +26,6 @@
 .xe-table-clickable td:first-child {
     border-top-left-radius: .5rem;
     border-bottom-left-radius: .5rem;
-}
-
-.xe-table-clickable tbody tr:hover td:first-child {
-    padding-left: 1rem;
 }
 
 .xe-table-clickable td:last-child {
